# taco

./: README.md
pytaco/: .gitignore  pyproject.toml
pytaco/taco/: __main__.py  api.py  session.py
pytaco/taco/api/: __init__.py
pytaco/tests/: test_session.py
tacoweb/: package-lock.json  package.json  vite.config.ts
tacoweb/src/: App.tsx
tacoweb/src/components/: ChatComponent.tsx  SmartTextBox.tsx
